--- a/views/index.html
+++ b/views/index.html
@@ -304,7 +304,7 @@
 						new Function(scr)();
 					}
 
-					next('<ui-plugin path="settingsform.{0}" config="init:?/reload" class="{2}_settings"><ui-component name="ready" config="delay:300" class="invisible"><ui-component name="viewbox" path="common.form" config="scrollbar:1;scrollbarshadow:1;margin:70;parent:auto"><div class="padding main npb"><div class="grid-2"><div class="m"><ui-component name="input" path="?.name" config="required:1;innerlabel:1;placeholder:@(Component name);maxlength:10000">@(Name)</ui-component><div class="help">ID: <ui-bind path="?.$id" config="text" class="b monospace"></ui-bind></div></div><div class="m"><ui-component name="input" path="?.path" config="dirsource:DEF.cl.paths;dircustom:1;dirraw:1;dirplaceholder:@(Search path or enter custom);monospace:1;innerlabel:1;placeholder:path.to.property;maxlength:10000">@(Path for reading/writing)</ui-component><div class="help"><span class="exec link" data-exec="settings_clearpath"><i class="ti ti-clean mr5"></i>@(Clear path)</span></div></div></div></div>{1}</ui-component><nav><ui-component name="validate" path="?" class="buttons"><button name="submit" disabled><i class="ti ti-check-circle"></i>@(SUBMIT)</button><button name="cancel">@(Cancel)</button></ui-component></nav></ui-component></ui-plugin>'.format(id, response, com.cls));
+					next('<ui-plugin path="settingsform.{0}" config="init:?/reload" class="{2}_settings"><ui-component name="ready" config="delay:300" class="invisible"><ui-component name="viewbox" path="common.form" config="scrollbar:1;scrollbarshadow:1;margin:70;parent:auto"><div class="padding main npb"><div class="grid-2"><div class="m"><ui-component name="input" path="?.name" config="required:1;innerlabel:1;placeholder:@(Component name);maxlength:10000">@(Name)</ui-component><div class="help">ID: <ui-bind path="?.$id" config="text" class="b monospace"></ui-bind></div></div><div class="m"><ui-component name="input" path="?.path" config="dirsource:DEF.cl.paths;dircustom:1;dirraw:1;dirplaceholder:@(Search path or enter custom);monospace:1;innerlabel:1;placeholder:path.to.property;maxlength:10000">@(Path for reading/writing)</ui-component><div class="help"><span class="exec link" data-exec="settigns_generatepath"><i class="ti ti-magic mr5"></i>@(Generate)</span> @(or) <span class="exec link" data-exec="settings_clearpath"><i class="ti ti-clean mr5"></i>@(Clear path)</span></div></div></div></div>{1}</ui-component><nav><ui-component name="validate" path="?" class="buttons"><button name="submit" disabled><i class="ti ti-check-circle"></i>@(SUBMIT)</button><button name="cancel">@(Cancel)</button></ui-component></nav></ui-component></ui-plugin>'.format(id, response, com.cls));
 				};
 
 				if (com.settings) {
@@ -328,6 +328,11 @@
 
 		function settings_clearpath(el) {
 			el.scope().set('path', '');
+		}
+
+		function settigns_generatepath(el) {
+			var scope = el.scope();
+			scope.set('path', scope.get().name.slug().replace(/-/g, ''));
 		}
 
 		function settings_submit(hide) {
@@ -622,6 +627,7 @@
 					metadata = { x: meta.pageX - offset.left, y: meta.pageY - offset.top, zindex: app.zindex + 1 };
 					parentid = app.instances[0].id;
 				}
+
 				app.add(parentid, containerindex, comid, position, null, metadata, true);
 			}
 		}
