--- a/views/index.html
+++ b/views/index.html
@@ -1155,12 +1155,15 @@
 
 		UIBuilder.on('io', function(app) {
 
-			for (var m of app.inputs) {
+			var inputs = CLONE(app.inputs);
+			var outputs = CLONE(app.outputs);
+
+			for (var m of inputs) {
 				m.text = m.name;
 				m.name = m.name + '<span class="badge badge-medium badge-color ml5">{0}</span>'.format(m.component.encode());
 			}
 
-			for (var m of app.outputs) {
+			for (var m of outputs) {
 				m.text = m.name;
 				m.name = m.name + '<span class="badge badge-medium badge-color ml5">{0}</span>'.format(m.component.encode());
 			}
