--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,6 @@
 	<ui-component name="LAZY directory" config="placeholder:@(Search)"></ui-component>
 	<ui-component name="LAZY approve" config="cancel:@(Cancel)"></ui-component>
 	<ui-component name="LAZY colorpicker"></ui-component>
-	<ui-component name="LAZY datepicker"></ui-component>
 	<ui-component name="LAZY floatinginput"></ui-component>
 	<ui-component name="LAZY notify" config="position:bottom right"></ui-component>
 	<ui-component name="LAZY notifybar"></ui-component>
@@ -32,7 +31,9 @@
 	<ui-component name="LAZY floatinginput"></ui-component>
 	<ui-component name="LAZY filesaver"></ui-component>
 	<ui-component name="LAZY filereader"></ui-component>
+	<ui-component name="LAZY prompt" config="cancel:@(Cancel);submit:@(OK)"></ui-component>
 
+	<ui-component name="datepicker" config="today:@(Today);days:@(Sunday,Monday,Tuesday,Wednesday,Thursday,Friday,Saturday);clear:@(Clear);months:@(January,February,March,April,May,Juny,July,August,September,October,November,December)"></ui-component>
 	<ui-component name="windows" path="common.windows" config="zindex:30"></ui-component>
 	<ui-component name="markdown"></ui-component>
 	<ui-component name="dropfiles" class="hidden" config="check:uibuilder_drop_check;exec:uibuilder_drop">@(Drop .json schema or .html component file)</ui-component>
