--- a/views/index.html
+++ b/views/index.html
@@ -339,7 +339,7 @@
 						new Function(scr)();
 					}
 
-					next('<ui-plugin path="settingsform.{0}" config="init:?/reload" class="{2}_settings"><ui-component name="ready" config="delay:300" class="invisible"><ui-component name="viewbox" path="common.form" config="scrollbar:1;scrollbarshadow:1;margin:70;parent:auto"><div class="padding main npb"><div class="grid-2"><div class="m"><ui-component name="input" path="?.name" config="required:1;innerlabel:1;placeholder:@(Component name);maxlength:10000">@(Name)</ui-component><div class="help">ID: <ui-bind path="?.$id" config="text" class="b monospace"></ui-bind></div></div><div class="m"><ui-component name="input" path="?.path" config="dirsource:DEF.cl.paths;dircustom:1;dirraw:1;dirplaceholder:@(Search path or enter custom);monospace:1;innerlabel:1;placeholder:path.to.property;maxlength:10000">@(Path for reading/writing)</ui-component><div class="help"><span class="exec link" data-exec="settigns_generatepath"><i class="ti ti-magic mr5"></i>@(Generate)</span> @(or) <span class="exec link" data-exec="settings_clearpath"><i class="ti ti-clean mr5"></i>@(Clear path)</span></div></div></div></div>{1}</ui-component><nav><ui-component name="validate" path="?" class="buttons"><button name="submit" disabled><i class="ti ti-check-circle"></i>@(SUBMIT)</button><button name="cancel">@(Cancel)</button></ui-component></nav></ui-component></ui-plugin>'.format(id, response, com.cls));
+					next('<ui-plugin path="settingsform.{0}" config="init:?/reload" class="{2}_settings"><ui-component name="ready" config="delay:300" class="invisible"><ui-component name="viewbox" path="common.form" config="scrollbar:1;scrollbarshadow:1;margin:70;parent:auto"><div class="padding main npb"><div class="grid-2"><div class="m"><ui-component name="input" path="?.name" config="required:1;innerlabel:1;placeholder:@(Component name);maxlength:10000">@(Name)</ui-component><div class="help">ID: <ui-bind path="?.$id" config="text" class="b monospace"></ui-bind></div></div><div class="m"><ui-component name="input" path="?.path" config="dirsource:DEF.cl.paths2;dircustom:1;dirraw:1;dirplaceholder:@(Search path or enter custom);monospace:1;innerlabel:1;placeholder:path.to.property;maxlength:10000">@(Path for reading/writing)</ui-component><div class="help"><span class="exec link" data-exec="settigns_generatepath"><i class="ti ti-magic mr5"></i>@(Generate)</span> @(or) <span class="exec link" data-exec="settings_clearpath"><i class="ti ti-clean mr5"></i>@(Clear path)</span></div></div></div></div>{1}</ui-component><nav><ui-component name="validate" path="?" class="buttons"><button name="submit" disabled><i class="ti ti-check-circle"></i>@(SUBMIT)</button><button name="cancel">@(Cancel)</button></ui-component></nav></ui-component></ui-plugin>'.format(id, response, com.cls));
 				};
 
 				if (com.settings) {
@@ -551,6 +551,19 @@
 			cms_hide();
 
 			UIBuilder.selected = com;
+
+			var paths = CLONE(DEF.cl.paths);
+			var paths2 = {};
+
+			for (var instance of app.instances) {
+				if (instance.config.path && instance.config.path.charAt(0) !== '@')
+					paths2[instance.config.path] = 1;
+			}
+
+			for (var key in paths2)
+				paths.push({ id: key, name: '<span class="badge badge-small mr5 badge-purple">@(path)</span><span class="monospace">{0}</span>'.format(key) });
+
+			SET('#paths2', paths);
 
 			SET('settingsform.id', com.id);
 			SET('settingsform.componentid', componentid);
